# finite-monkey-engine

./: .gitignore  HUGE_PROJECT_FEATURE.md  LANGUAGE_SUPPORT_UPDATE.md  README.md  README_CN.md  check_context.md  compound.xlsx  env.example  liquidity_pool.move  philosophy_of_monkey.md  philosophy_of_monkey_en.md  precondition_analysis.md  project_task.sql  prompt.txt  pyproject.toml  requirements.txt  verify_reasoning.py
pendle/lancedb_function.lance/_transactions/: 0-107ed84d-7b28-4a58-a8d4-3b512c3619a4.txn
pendle/lancedb_function.lance/_versions/: 1.manifest
src/: .env.example  aaa.md  ai_engine.py  dataset_manager.py  db.sql  logging_config.py  main.py
src/checklist_pipeline/: checklist_generator.py  checklist_generator_without_code.py
src/code_summarizer/: CHANGELOG.md  INTEGRATION_README.md  README.md  README_CN.md  __init__.py  business_flow_analyzer.py  token_calculator.py
src/codebaseQA/: MODIFICATION_SUMMARY_CN.md  README.md  README_CN.md  rag_processor.py
src/codebaseQA/json/: README_CN.md
src/codebaseQA/lancedb/: functions_to_check_chainlink.json
src/codebaseQA/lancedb/lancedb_tonvm.lance/_transactions/: 0-7a925511-2476-41a3-8e35-f765003a6d45.txn  (+1645 more)
src/codebaseQA/mermaid_output/: README.md
src/codebaseQA/mermaid_output/tonvm/: tonvm_global_overview.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_boc.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_cells.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_cp.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_crypto.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_data.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_db.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_ops.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_utils_lib.mmd  tonvm_src_dataset_agent-v1-c4_tonvm_code_vm.mmd
src/context/: RAG_ENHANCEMENT_SUMMARY.md  README.md  README_CN.md  __init__.py  business_flow_processor.py  call_tree_builder.py  context_factory.py  context_manager.py  function_utils.py  rag_processor.py
src/dao/: README.md  README_CN.md  cache_manager.py  entity.py  task_mgr.py  utils.py
src/dataset/agent-v1-c4/: datasets.json
src/knowledges/: 7540properties  Across.md  Arbitrum.md  Chainlink-CCIP.md  LayerZeroV2.md  README.md  README_CN.md  Wormhole.md  amy.vault.erc4626.primer.md  base.primer.md  chainlink  checklist.xlsx  dao  inlineassembly  lending  liquidation  liquiditymanager  signaturereplay  slippage  solana_checklist.md  univ3  vulnerabilities.xlsx
src/openai_api/: README.md  README_CN.md  model_config.json  model_manager.py  openai.py  openai_forcommon.py  openai_forcursor.py
src/planning/: ENHANCED_BUSINESS_FLOW_README.md  README.md  README_CN.md  README_EN.md  __init__.py  assumption_validation.py  business_flow_processor.py  business_flow_utils.py  call_tree_utils.py  complexity.py  config_utils.py  function_utils.py  json_utils.py  planning.py  planning_processor.py  planning_v2.py
src/project/: project_audit.py  project_parser.py
src/prompt_factory/: README.md  README_CN.md  assumption_prompt.py  assumption_validation_prompt.py  checklist_pipeline_prompt.py  checklists_prompt.py  core_prompt.py  group_summary_prompt.py  periphery_prompt.py  prompt_assembler.py  prompt_backup  vul_check_prompt.py  vul_prompt.py  vul_prompt_common.py
src/reasoning/: README.md  README_CN.md  __init__.py  scanner.py
src/reasoning/utils/: __init__.py  dialogue_manager.py  group_result_summarizer.py  scan_utils.py
src/res_processor/: README.md  README_CN.md  res_processor.py
src/tree_sitter_parsing/: README.md  README_CN.md  __init__.py  advanced_call_tree_builder.py  call_tree_builder.py  chunk_config.py  document_chunker.py  project_audit.py  project_parser.py
src/ts_parser_core/: README.md  README_CN.md  __init__.py  demo.py  demo_visualization.py  dependency_demo.py
src/ts_parser_core/ts_parser/: __init__.py  base_parser.py  data_structures.py  language_configs.py  multi_language_analyzer.py
src/ts_parser_core/ts_parser/parsers/: __init__.py  cpp_parser.py  go_parser.py  move_parser.py  rust_parser.py  solidity_parser.py
src/validating/: README.md  README_CN.md  __init__.py  checker.py  integration_test.py
src/validating/processors/: __init__.py  analysis_processor.py  confirmation_processor.py  context_update_processor.py
src/validating/utils/: __init__.py  check_utils.py
src/vulnerability_checking/: README.md  integration_test.py
src/vulnerability_checking/processors/: analysis_processor.py  confirmation_processor.py
src/vulnerability_checking/utils/: __init__.py  context_manager.py
src/vulnerability_scanning/: scanner.py
src/vulnerability_scanning/utils/: scan_utils.py
(+3289 files in other folders)
